# Semantic-Search

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
artifacts/: cluster_probs.npy  faiss_index
config/: settings.py
scripts/: cluster.py  ingest.py
src/api/: app.py  models.py  routes.py
src/cache/: semantic_cache.py
src/clustering/: fuzzy_gmm.py  visualizer.py
src/data/: loader.py
src/embeddings/: encoder.py
src/search/: engine.py
src/vectordb/: store.py
tests/: test_cache.py  test_search.py
