[project]
name = "semantic-search-newsgroups"
version = "1.0.0"
description = "A production-grade semantic search system combining dense vector retrieval, probabilistic fuzzy clustering, and a cluster-accelerated semantic cache."
authors = [
    {name = "AI Engineer"}
]
dependencies = [
    "sentence-transformers==5.2.3",
    "faiss-cpu==1.13.2",
    "scikit-learn==1.8.0",
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "loguru==0.7.3",
    "joblib==1.5.3",
    "python-dotenv==1.2.2"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["config", "scripts", "src"]

[tool.pyright]
include = ["src", "scripts", "config", "tests"]
exclude = ["**/__pycache__", ".venv"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
